samples/_failures_safe/1761186107_d1241d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f4800fc0.c: In function ‘main’:
./samples/SAFE/__tmp_f4800fc0.c:147:68: error: expected ‘)’ at end of input
  147 |         printf("Matrix %d initialized with sequential values:\n", i
      |               ~                                                    ^
      |                                                                    )
./samples/SAFE/__tmp_f4800fc0.c:147:9: error: expected declaration or statement at end of input
  147 |         printf("Matrix %d initialized with sequential values:\n", i
      |         ^~~~~~
./samples/SAFE/__tmp_f4800fc0.c:147:9: error: expected declaration or statement at end of input
